# dune-ddm

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  config.h.cmake  dune-ddm.pc.in  dune.module
data/: bar.msh  lshape.msh  unitcube.msh  unitsquare.msh
dune/: CMakeLists.txt
dune/ddm/: CMakeLists.txt  combined_preconditioner.hh  datahandles.hh  galerkin_preconditioner.hh  helpers.hh  logger.hh  nonoverlapping_operator.hh  overlap_extension.hh  pdelab_helper.hh  pou.hh  schwarz.hh  strumpack.hh  twolevel_schwarz.hh
dune/ddm/coarsespaces/: coarse_spaces.hh  energy_minimal_extension.hh  multivec.hh
dune/ddm/eigensolvers/: #arnoldi.hh#  #blockmultivector.hh#  aligned_allocator.hh  arnoldi.hh  blas.hh  block_krylov_schur.hh  blockmatrix.hh  blockmultivector.hh  concepts.hh  dot.hh  eigensolver_params.hh  eigensolvers.cc  eigensolvers.hh  gemm.hh  helpers.hh  inner_products.hh  lapacke.hh  orthogonalisation.hh  shift_invert_eigenproblem.hh  spectra.hh  srrit.hh  standard_eigenproblem.hh  subspace_iteration.hh  umfpack.hh
dune/ddm/test/: B.mtx  CMakeLists.txt  matrix_symmetry_helper.hh  problem.hh  test_blocksolver.cc  test_eigensolver.cc  test_lanczos_step.cc
examples/: #coefficient.lua#  CMakeLists.txt  FRAMEWORK.md  assemblewrapper.hh  coefficient.lua  convection_diffusion_coefficient.lua  convection_diffusion_problems.hh  convectiondiffusiondg.cc  convectiondiffusiondg.hh  convectiondiffusiondg.ini  ddm_utilities.hh  debug_overlap.cc  generic_ddm_problem.hh  gpu_solvers.cc  linearelasticity.cc  linearelasticity.hh  linearelasticity.ini  main.cc  metis.hh  nonlinearpoisson.cc  nonlinearpoisson.hh  nonlinearpoisson.ini  pdelab_example.cc  pdelab_example.hh  pdelab_example.ini  pdelab_helper.hh  pdelab_schwarz.hh  poisson.cc  poisson.hh  poisson.ini  poisson_coefficient.lua  poisson_problems.hh  problem_traits.hh  symmetric_convection_diffusion_coefficient.lua  test_dg_nonoverlapping.cc  test_framework.cc  test_framework.ini  test_neumann_nullspace.cc
include/: combined_preconditioner.hh  datahandles.hh  galerkin_preconditioner.hh  helpers.hh  logger.hh  nonoverlapping_operator.hh  overlap_extension.hh  pdelab_helper.hh  pou.hh  schwarz.hh  strumpack.hh
include/coarsespaces/: coarse_spaces.hh  eigensolvers.hh  energy_minimal_extension.hh  fakemultivec.hh  geneo.hh  helpers.hh  msgfem.hh  multivec.hh  nicolaides.hh  spectral_coarsespace.hh
src/: eigensolvers.cc  logger.cc
tests/: CMakeLists.txt  test_build_matrix.cc  test_galerkin_coarse_matrix.cc
